--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+
+    <meta property=’og:title’ content='Legacy Martinez'/>
+    <meta property=’og:image’ content='https://YOUR_THUMBNAIL_IMAGE_URL'/>
+    <meta property=’og:description’ content='Crafting Your Vision: Exceptional Wood, Glass, and Metal Creations, Plus Custom-Designed Print Shirts and Hats – Starting at Just $20!'/>
+    <!-- <meta property=’og:url’ content='URL OF YOUR WEBSITE'/> -->
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content='website'/>
+
+
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <!-- Google fonts -->
@@ -13,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     
-
+    <link rel="icon" type="image/x-icon" href="IMG/favicon.jpg">
 
     <link rel="stylesheet" href="CSS/style.css">
    
