added slider zoom feature
added small tweaks

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
       <section id="gallery">
 
-          <h2>Some of my work !</h2>
+          <h2>Some of my work&nbsp;!</h2>
 
           <div class="slider-container">
               <div class="slides">
