--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     <meta property=’og:title’ content='Legacy Martinez'/>
-    <meta property=’og:image’ content='https://YOUR_THUMBNAIL_IMAGE_URL'/>
+    <meta property=’og:image’ content='https://i.ibb.co/fFPJgh7/127-0-0-1-5500-index-html.png'/>
     <meta property=’og:description’ content='Crafting Your Vision: Exceptional Wood, Glass, and Metal Creations, Plus Custom-Designed Print Shirts and Hats – Starting at Just $20!'/>
     <!-- <meta property=’og:url’ content='URL OF YOUR WEBSITE'/> -->
     <meta property='og:image:width' content='1200' />
